@@ -1,2 +1,35 @@
 SUBDIRS = pqxx
 
+nobase_include_HEADERS= pqxx/pqxx pqxx/all.h \
+	pqxx/binarystring pqxx/binarystring.hxx \
+	pqxx/cachedresult.h \
+	pqxx/connection pqxx/connection.hxx pqxx/connection.h \
+	pqxx/connection_base pqxx/connection_base.hxx pqxx/connection_base.h \
+	pqxx/connectionitf.h \
+	pqxx/cursor pqxx/cursor.hxx pqxx/cursor.h \
+	pqxx/dbtransaction pqxx/dbtransaction.hxx pqxx/dbtransaction.h \
+	pqxx/except pqxx/except.hxx pqxx/except.h \
+	pqxx/isolation pqxx/isolation.hxx pqxx/isolation.h \
+	pqxx/largeobject pqxx/largeobject.hxx pqxx/largeobject.h \
+	pqxx/libcompiler.h \
+	pqxx/libpq-forward.hxx \
+	pqxx/nontransaction pqxx/nontransaction.hxx pqxx/nontransaction.h \
+	pqxx/pipeline pqxx/pipeline.hxx \
+	pqxx/result pqxx/result.hxx pqxx/result.h \
+	pqxx/robusttransaction pqxx/robusttransaction.hxx \
+	pqxx/robusttransaction.h \
+	pqxx/subtransaction pqxx/subtransaction.hxx \
+	pqxx/tablereader pqxx/tablereader.hxx pqxx/tablereader.h \
+	pqxx/tablestream pqxx/tablestream.hxx pqxx/tablestream.h \
+	pqxx/tablewriter pqxx/tablewriter.hxx pqxx/tablewriter.h \
+	pqxx/transaction pqxx/transaction.hxx pqxx/transaction.h \
+	pqxx/transaction_base pqxx/transaction_base.hxx \
+	pqxx/transaction_base.h \
+	pqxx/transactionitf.h \
+	pqxx/transactor pqxx/transactor.hxx pqxx/transactor.h \
+	pqxx/trigger pqxx/trigger.hxx pqxx/trigger.h \
+	pqxx/util pqxx/util.hxx pqxx/util.h
+
+nobase_nodist_include_HEADERS = \
+	pqxx/config-public-compiler.h
+
